--- a/src/ProjectView/ProjectSummaryElement.css
+++ b/src/ProjectView/ProjectSummaryElement.css
@@ -9,13 +9,41 @@
     width: 100%;
 }
 
+.SummaryEngineButtonWithoutClick
+{
+    all: unset;
+    display: flex;
+    align-items: center;
+    padding: 0px 5px;
+    border-radius: 5px;
+    width: auto;
+    margin: 10px 10px;
+    font-size: 22px;
+    color: #333333;
+}
+
 .SummaryEngineButton
 {
     all: unset;
     display: flex;
     align-items: center;
+    padding: 0px 5px;
+    border-radius: 5px;
+    width: auto;
+    margin: 10px 10px;
+    font-size: 22px;
+    color: #333333;
+
+    background-color: #00000010;
+    transition: background-color .5s cubic-bezier(.05,0,0,1);
 }
 
+.SummaryEngineButton:hover
+{
+    background-color: #00000020;
+}
+
+.SummaryEngineButtonWithoutClick >svg,
 .SummaryEngineButton > svg
 {
     width: 20px;
@@ -29,25 +57,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 10px;
+    /*padding: 0 10px;*/
+    margin: 10px 10px;
+    border-radius: 5px;
+
+    background-color: #00000010;
+    transition: background-color .5s cubic-bezier(.05,0,0,1);
+}
+
+.SummaryPublishButton:hover
+{
+    background-color: #00000020;
 }
 
 .SummaryPublishButton > svg
 {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     padding: 5px;
 }
-
-/*.Row*/
-/*{*/
-/*    width: 200px;*/
-/*    height: 100px;*/
-/*    padding: 10px;*/
-/*}*/
-
-/*.Row img*/
-/*{*/
-/*    width: 100%;*/
-/*    !*height: 100px;*!*/
-/*}*/
