--- a/src/ProjectView/ProjectSummaryElement.css
+++ b/src/ProjectView/ProjectSummaryElement.css
@@ -1,11 +1,12 @@
 .StandardProjectSummaryElement
 {
+    padding: 10px 0;
     width: 100%;
 }
 
 .StandardProjectSummaryElementTitle
 {
-    padding: 30px 10%;
+    padding: 20px 10%;
     width: 100%;
 }
 
