--- a/src/Navigation/NavBar.css
+++ b/src/Navigation/NavBar.css
@@ -1,11 +1,9 @@
 .StandardNavBar
 {
     width: 100%;
-    height: 50px;
     background-color: #FFFCF7;
     position: sticky;
     top: 0px;
-    padding: 10px 0px;
     display: flex;
     justify-content: space-between;
     z-index: 10;
@@ -13,23 +11,33 @@
 
 .NavList{
     display: flex;
-    padding: 10px 10px;
 }
 
-.NavItem
-{
-    all: unset;
-    border-radius: 5px;
-    width: auto;
-    padding: 0px 10px;
-    margin: 0px 10px;
-    font-family: 'Quicksand', Arial;
-    font-size: 22px;
-    color: #333333;
-    align-content: center;
-    background-color: #00000010;
-    transition: background-color .5s cubic-bezier(.05,0,0,1);
-}
+/*.NavItem*/
+/*{*/
+/*    all: unset;*/
+/*    border-radius: 5px;*/
+/*    width: auto;*/
+/*    padding: 0px 10px;*/
+/*    margin: 0px 10px;*/
+/*    font-family: 'Quicksand', Arial;*/
+/*    font-size: 22px;*/
+/*    color: #333333;*/
+/*    align-content: center;*/
+/*    background-color: #00000010;*/
+/*    transition: background-color .5s cubic-bezier(.05,0,0,1);*/
+/*}*/
+
+/*.NavItem:before,*/
+/*.NavItem:after*/
+/*{*/
+/*    content:"";*/
+/*    width: 10px;*/
+/*    height: 2px;*/
+/*    position: absolute;*/
+/*    transition: all 0.2s linear;*/
+/*    background: #fff;*/
+/*}*/
 
 .NavItem:hover
 {
